<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="12dp"
            android:scaleType="centerCrop"
            app:placeholderImage="@drawable/ic_profile"
            app:roundAsCircle="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:text="Full Name"
            android:textColor="@color/colorDarkGray"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_round_border"
            android:fontFamily="@font/questrial"
            android:hint="Full Name"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/questrial"
            android:text="Email"
            android:textColor="@color/colorDarkGray"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_round_border"
            android:fontFamily="@font/questrial"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/questrial"
            android:text="Password"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_round_border"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/questrial"
            android:text="Confirm Password"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_round_border"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnResister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_button"
            android:onClick="register"
            android:stateListAnimator="@null"
            android:text="Register"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLogin"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="Already have account ? "
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="Login Here"
                android:textColor="@color/colorBlue"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>